--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^3.11.0",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-typeform": "^1.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
